--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
                 <a href="#build-story" class="nav-item">Build Story</a>
                 <a href="#team" class="nav-item">Team</a>
                 <a href="#contact" class="nav-item">Contact</a>
+                <a href="/competitions.html" class="nav-item">Competitions</a>
+            </nav>
             </nav>
         </div>
     </header>
-
+    
     <main>
         <section id="home" class="hero">
             <div class="hero-bg"></div>
