--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a href="#build-story" class="nav-item">Build Story</a>
                 <a href="#team" class="nav-item">Team</a>
                 <a href="#contact" class="nav-item">Contact</a>
-                <a href="/competitions.html" class="nav-item">Competitions</a>
+                <a href="competitions.html" class="nav-item">Competitions</a>
             </nav>
             </nav>
         </div>
@@ -265,3 +265,4 @@
     <script src="scripts.js"></script>
 </body>
 </html>
+
